<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eastercon 2026</string>
    <string name="tab_all">All</string>
    <string name="tab_fri">Fri</string>
    <string name="tab_sat">Sat</string>
    <string name="tab_sun">Sun</string>
    <string name="tab_mon">Mon</string>
    <string name="loading_fetching">Fetching programme…</string>
    <string name="loading_progress">Loading %1$d of %2$d…</string>
    <string name="error_no_events">Could not load programme. Check your connection and refresh.</string>
    <string name="no_events_for_day">No events for this day.</string>
    <string name="unknown_location">Location TBC</string>
    <string name="no_description">No description available.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_buy_coffee">Buy the creator of the app a coffee! ☕</string>
    <string name="filter_going">Going</string>
    <string name="filter_interested">Interested</string>
    <string name="filter_default">Default</string>
    <string name="filter_hidden">Hidden</string>
    <string name="filter_passed">Passed</string>
    <string name="your_interest">Your Interest</string>
    <string name="going">Going</string>
    <string name="interested">Interested</string>
    <string name="hidden">Hide</string>
    <string name="update_available_title">Update Available</string>
    <string name="update_available_message">Version %1$s is available. Would you like to download it?</string>
    <string name="update_download">Download</string>
    <string name="update_later">Later</string>
    <string name="update_downloading">Downloading…</string>
    <string name="update_downloading_message">Downloading update, please wait…</string>
    <string name="update_download_failed">Download failed. Please try again later.</string>
    <string name="action_about">About</string>
    <string name="about_title">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_latest">Latest available: %1$s</string>
    <string name="about_up_to_date">Up to date ✓</string>
    <string name="about_data_source">Data source: %1$s</string>
    <string name="about_last_refresh">Last refreshed: %1$s</string>
    <string name="about_never_refreshed">Not yet refreshed</string>
    <string name="about_bundled">Bundled (app install)</string>
    <string name="about_checking">Checking…</string>
    <string name="about_close">Close</string>
</resources>
